examples/test/testpolicy19744.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19744
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key0: value22
      key8: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value48
          key10: value26
      podSelector:
        matchLabels:
          key16: value47
          key18: value43
          key28: value11
